// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Matrix Input Forms 1`] = `
[
  0.7,
  0,
  0,
  0.17,
  0,
  0.7,
  0,
  0.0896,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 2`] = `
[
  0.7,
  0,
  0,
  0.31,
  0,
  0.7,
  0,
  0.0896,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 3`] = `
[
  0.7,
  0,
  0,
  0.17,
  0,
  0.7,
  0,
  -0.091,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 4`] = `
[
  0.7,
  0,
  0,
  0.31,
  0,
  0.7,
  0,
  -0.091,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
